# tinygine

./: .gitignore  CMakeLists.txt  LICENSE  README.md
assets/: arkanoid.scene  empty.json  f16.json  f162.json  test.json  test2.json
assets/materials/: Mat_Ball.mat  Mat_Brick_0.mat  Mat_Brick_1.json  Mat_Brick_2.mat  Mat_Brick_3.json  Mat_Instanced_0.mat  Mat_Instanced_1.mat  Mat_Instanced_2.mat  Mat_Instanced_3.json  Mat_Instanced_4.json  Mat_Instanced_5.json  Mat_Instanced_6.json  Mat_Mirror.json  Mat_Paddle.mat  Mat_Skinned_ScifiMarine.json  Mat_Skinned_USMarineBody.mat  Mat_Skinned_USMarineGun.mat  Mat_Static_Floor.json  Mat_Wall.json
assets/models/: 737.fbx  f16.fbx
assets/models/Player/: untitled.fbx
assets/models/USMarines/: animations-list.txt  usmarine.fbx
assets/models/f16/: f16.fbx
assets/models/mini13R/: mini.fbx  offset.txt
assets/textures/ibl/: irradiance.dds
config/: config.json
include/: d3dx12.h  miniaudio.h
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.cpp
scripts/: smoketexture.py
src/: projectmap.txt
src/app/: main.cpp
src/core/: Types.cpp  debug_assimp_model.cpp
src/engine/: AssetRegistry.cpp  AssetRegistry.h  Engine.cpp  Engine.h  EngineConfig.h  EngineDependencies.h  EngineGlobals.cpp  EngineGlobals.h  EngineStyle.cpp  EngineStyle.h  SSAOParams.h  SceneManager.cpp  SceneManager.h  SimState.h
src/engine/assets/: Material.cpp  Material.h  Mesh.cpp  Mesh.h  MeshFactory.cpp  MeshFactory.h  SkeletalMesh.cpp  SkeletalMesh.h
src/engine/components/: FpsCamera.cpp  FpsCamera.h  Input.cpp  Input.h
src/engine/components/audio/: AudioSource.cpp  AudioSource.h
src/engine/components/fx/: ParticleSystemComponent.cpp  ParticleSystemComponent.h
src/engine/components/gameplay/: Ball.cpp  Ball.h  BouncingJumper.cpp  BouncingJumper.h  Brick.cpp  Brick.h  BulletLife.cpp  BulletLife.h  DeathZone.cpp  DeathZone.h  Paddle.cpp  Paddle.h  PlayerController.cpp  PlayerController.h  PlayerJumper.cpp  PlayerJumper.h  PlayerShooter.cpp  PlayerShooter.h  RotatingObstacle.cpp  RotatingObstacle.h
src/engine/components/physics/: BoxCollider.cpp  BoxCollider.h  CapsuleCollider.cpp  CapsuleCollider.h  Collider.cpp  Collider.h  MeshCollider.cpp  MeshCollider.h  Rigidbody.cpp  Rigidbody.h  SkeletalRagdollComponent.cpp  SkeletalRagdollComponent.h  SphereCollider.cpp  SphereCollider.h
src/engine/components/render/: Animator.cpp  Animator.h  DirectionalLight.cpp  DirectionalLight.h  MeshRenderer.cpp  MeshRenderer.h  PointLight.cpp  PointLight.h  SkinnedMeshRenderer.cpp  SkinnedMeshRenderer.h
src/engine/core/: DebugAssimp.cpp  Types.cpp  Types.h  debug_assimp_model.cpp  debug_assimp_model.h
src/engine/environment/: Atmosphere.cpp  Atmosphere.h  Skybox.cpp  Skybox.h  VolumetricClouds.cpp  VolumetricClouds.h
src/engine/physics/: CollisionTypes.h  DebugDraw.cpp  DebugDraw.h  JoltDebugRenderer.cpp  JoltDebugRenderer.h  MyContactListener.cpp  MyContactListener.h  PhysicsLayers.cpp  PhysicsLayers.h
src/engine/scene/: Component.cpp  Component.h  GameObject.cpp  GameObject.h  SceneTypes.cpp  SceneTypes.h  Transform.cpp  Transform.h
src/engine/terrain/: SafeQueue.h  TerrainChunk.cpp  TerrainChunk.h  TerrainManager.cpp  TerrainManager.h  TerrainTypes.h
src/pch/: Pch.h
src/rhi/: GraphicsTypes.h  MipGenerator.cpp  RHI.cpp  RHI.h  RHI_DX11.cpp  RHI_DX11.h  RHI_DX12.cpp  RHI_DX12.h  RHI_Vulkan.cpp  RHI_Vulkan.h
src/rhi/backend_types/: DX11Types.h  DX12Types.h  VulkanTypes.h
src/rhi/tinydds/: tinydds.h
src/rhi/utils/: MipGenerator.cpp  MipGenerator.h  ShaderCompiler.cpp  ShaderCompiler.h
src/shaders/clouds/: cloud_detail.comp.hlsl  cloud_raymarch.frag.hlsl  cloud_shape.comp.hlsl  cloud_upscale.frag.hlsl  fullscreen.vert.hlsl
src/shaders/rhi/: atm_sky.frag.hlsl  atm_sky.vert.hlsl  atm_skyview.comp.hlsl  atm_trans.comp.hlsl  bloom.frag.hlsl  copy.frag.hlsl  fullscreen.vert.hlsl  line.frag.hlsl  line.vert.hlsl  particle.comp.hlsl  particle.frag.hlsl  particle.vert.hlsl  pbr-single.vert.hlsl  pbr-skinned-shadow.vert.hlsl  pbr-skinned.frag.hlsl  pbr-skinned.vert.hlsl  pbr.frag.hlsl  pbr.vert.hlsl  skybox.frag.hlsl  skybox.vert.hlsl  ssao.frag.hlsl  ssao_blur.frag.hlsl  ssao_combine.frag.hlsl  ssr.frag.hlsl  vignette.frag.hlsl
src/shaders/rhi/particles/: particle.texture.frag.hlsl
src/shaders/rhi/terrain/: terrain.frag.hlsl  terrain.vert.hlsl
